--- a/frontend/profile/style.css
+++ b/frontend/profile/style.css
@@ -1,29 +1,73 @@
-body{
-	background: url("background.png");
+@font-face {
+    font-family: "CelestiFrom-rvrqp";
+    src: url('/Users/obouhrir/Downloads/FFF-Tusj/FFF_Tusj.ttf'); /* Locate the .ttf file within your directory*/
+  }
+
+*{
     margin: 0;
-    height: 100vh;
-    display: flex;
-	/* flex-direction: column; */
-    justify-content: center;
+    padding: 0;
+    box-sizing: border-box;
+}
+header{
+    text-align: left;
+    background-color: #f1f1f1;
+    width: 720px;
+    height: 58px;
+    top: 12px;
+    left: 32px;
+    border: 1px;
+}
+body{
+    background: url('background.png');
+    background-size: cover;
+}
+.container{
+    border: 1px solid white;
+    display : flex;
+    flex-direction: row;
     align-items: center;
-	/* overflow-y: auto; */
-}
-#hh{
-	color:aquamarine;
-}
-.container {
-    display: flex;
-    justify-content: space-between; 
+    justify-content: space-around;
     width: 100%;
-	/* min-height: 100vh; */
+    height: calc(100vh - 60px);
+    padding: 0 100px;
+    gap: 5rem;
 }
 
-#level, #profile, #matches {
-    color: blue;
-    font-size: 40px;
+.profile , .level, .matches{
+   
+    font-family: "Magnus Cederholm License";
+    font-size: 97px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.2) ,rgba(247, 243, 244, 0.1));
+}
+.profile{
+    flex-grow: 2;
+    height: 442px;
+}
+.level{
+    height: 210px;
+    width: 275px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 30.19px;
+    backdrop-filter: blur(15px);
+    box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
+}
+.matches{
+    height: 210px;
+    width: 275px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 30.19px;
+    backdrop-filter: blur(15px);
+    box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
 }
 
-#level {
-	color: blue;
-	
+.protest-guerrilla-regular {
+    font-family: "Protest Guerrilla", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
