--- a/frontend/profile/style.css
+++ b/frontend/profile/style.css
@@ -1,4 +1,7 @@
-
+@font-face {
+    font-family: "celesti";
+    src: url("celesti-from-font/CelestiFrom-rvrqp.otf");
+}
 *{
     margin: 0;
     padding: 0;
@@ -25,12 +28,22 @@ header{
     /* width: calc(100% - 32px); */
     /* height: calc(100% - 12px); */
 }
+.profile-icon{
+    border-radius: 50%;
+    margin-right: 10px;
+    width: 1;
+}
+a {
+    text-decoration: none;
+}
 .head{
 
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 80%;
+    color: white;
+    font-family: "celesti";
 }
 
 
@@ -44,6 +57,7 @@ header{
     height: calc(100vh - 70px);
     padding: 0 100px;
     gap: 5rem;
+    color: white
 }
 
 .profile , .level, .matches{
