--- a/frontend/profile/style.css
+++ b/frontend/profile/style.css
@@ -12,6 +12,9 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
+.logo{
+    cursor: pointer;
+}
 .profile-icon{
     display: flex;
     align-items: center;
@@ -32,16 +35,15 @@ header{
     margin-left: 32px;
     background-image: linear-gradient(to bottom right, rgba(255, 254, 254, 0.2) ,rgba(0, 0, 0, 0.25));
     box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
-    /* width: calc(100% - 32px); */
-    /* height: calc(100% - 12px); */
 }
 .profile-icon{
     border-radius: 50%;
     margin-right: 10px;
-    width: 1;
+    width: 1%;
 }
 a {
     text-decoration: none;
+    color : white
 }
 .head{
 
@@ -61,17 +63,15 @@ a {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    height: calc(100vh - 70px);
+    height: 60rem;
     padding: 0 100px;
-    gap: 5rem;
+    gap: 11rem;
     color: white
 }
 
-.profile , .level, .matches{
-   
-    font-family: "Magnus Cederholm License";
+
+.profile , .level, .matches , .stats{
     color  : white;
-    font-size: 97px;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -80,21 +80,23 @@ a {
     backdrop-filter: blur(10px);
     box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
 }
-.profile{
-    flex-grow: 2;
-    height: 40%;
-    width: 60%;
+.profile{  
     font-size: 24px;
-    font-weight: 400;
+    height: 68%;
+    width: 54%;
     line-height: 30.19px;
+}
+.level{
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    flex-direction: column;
 }
 .level, .matches{
     
-    height: 25%;
+    height: 43%;
     width: 30%;
     font-size: 24px;
-    font-weight: 400;
-    line-height: 30.19px;
 }
 
 
