--- a/frontend/game/game.css
+++ b/frontend/game/game.css
@@ -16,10 +16,10 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 70px);
     width: 100%;
     color:white;
-    background-image: url("../profile/background.png");
+    /* background-image: url("../profile/background.png"); */
     background-size: cover;
     gap :3rem;
 }
@@ -27,18 +27,12 @@
     position: relative;
     width:60%;
     height:60%;
-}
-#table{
-    width: 100%;
-    height: 100%;
     border : 5px solid rgb(255, 255, 255);
     border-radius: 20px;
-    /* filter: blur(10px); */
     backdrop-filter: blur(20px);
     box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
-    /* cursor: pointer; */
-
 }
+
 /* @keyframes smoothly{
     from{
         background-color: rgba(255, 255, 255, 0.5);
@@ -77,7 +71,6 @@
     border-radius: 50%;
     background-color: white;
 }
-
 .scoreboard {
     display: flex;
     justify-content: space-between;
