--- a/frontend/game/game.css
+++ b/frontend/game/game.css
@@ -99,3 +99,17 @@
 	margin-top : 1rem;
 	font-size: 30px;
 }
+
+
+.winner{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100%;
+	height: 100%;
+	/* border-radius: 15px; */
+	/* background-image: linear-gradient(to bottom right, rgba(255, 254, 254, 0.2) ,rgba(0, 0, 0, 0.25)); */
+	backdrop-filter: blur(10px);
+	/* box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25); */
+	font-family: "celesti";
+}
