--- a/frontend/index/style.css
+++ b/frontend/index/style.css
@@ -1,9 +1,160 @@
-.sidebar{
-    position: fixed;
-    width: 250px;
-    height: 100%;
-    /* background: #11101d; */
-    padding: 10px 0;
-    z-index: 100;
-    transition: all 0.5s ease;
+@font-face {
+    font-family: "celesti";
+    src: url("celesti-from-font/CelestiFrom-rvrqp.otf");
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background: url('background.png');
+    background-size: cover;
+    background-attachment: fixed;
+}
+.logo{
+    cursor: pointer;
+    width: 4rem;
+}
+.profile-icon{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+}
+header{
+    padding: 0 1.5%;
+    display : flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 58px;
+    width: 50%;
+    border-radius: 15px;
+    margin-top: 12px;
+    margin-left: 32px;
+    background-image: linear-gradient(to bottom right, rgba(255, 254, 254, 0.2) ,rgba(0, 0, 0, 0.25));
+    box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
+}
+a {
+    text-decoration: none;
+    color : white
+}
+.head{
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    color: white;
+    font-family: "celesti";
+    font-size: 1rem;
+}
+
+
+
+.container{
+    display : flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: calc(100vh - 70px);
+    padding: 0 100px;
+    gap: 11rem;
+    color: white
+}
+
+
+.profile , .level, .matches , .stats{
+    color  : white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: linear-gradient(to bottom right, rgba(255, 254, 254, 0.2) ,rgba(0, 0, 0, 0.25));
+    backdrop-filter: blur(10px);
+    box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
+    font-family: "celesti";
+}
+
+.txt{
+    display : flex;
+    align-items:center;
+    flex-direction: column;
+    padding-top :6rem;
+    
+}
+
+.profile-img{
+    border-radius: 15px;
+    width: 30%;
+    height: 70%;
+}
+.profile{ 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 4rem;
+    height: 46%;
+    width: 69%;
+    margin-bottom: 16rem;
+    padding-top: 7rem;
+    /* block-size: 54px; */
+}
+.level{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+.level, .matches{
+    
+    height: 32%;
+    width: 24%;
+    font-size: 2.6rem;
+    margin-bottom: 16rem;
+
+}
+
+.matches{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 0.5rem;
+    /* justify-content: space-around; */
+}
+
+.online-status::before{
+    content: "";
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin-right: 5px;
+    border-radius: 50%;
+    background-color: rgb(4, 255, 4);
+}
+a{
+    cursor: pointer;
+}
+@media (max-width: 1500px){
+    .logo{
+        width: 2rem;
+    }
+    .head{
+        font-size: 0.2rem;
+    }
+    .profile , .level, .matches , .stats{
+        height: 60%;
+        width: 90%;
+        font-size:0.5rem;
+    }
+
+    .level, .matches{
+        height: 40%;
+        width: 80%;
+        font-size:0.5rem;
+    }
 }
