--- a/frontend/front/style/index.css
+++ b/frontend/front/style/index.css
@@ -9,9 +9,41 @@
 }
 body{
     background: url('../svg/background.png');
-    /* background-image: linear-gradient(to right, #61440ae2,#770c11d2); */
     background-size: cover;
     background-attachment: fixed;
+}
+body{
+    background-image: linear-gradient(320deg, #000000, #aa1212, #000000, #a30c0c);
+    background-size: 800% 800%;
+
+    -webkit-animation: smooth 25s ease infinite;
+    -moz-animation: smooth 25s ease infinite;
+    animation: smooth 25s ease infinite;
+}
+
+@-webkit-keyframes smooth {
+    0%{background-position:0% 11%}
+    50%{background-position:100% 90%}
+    100%{background-position:0% 11%}
+}
+@-moz-keyframes smooth {
+    0%{background-position:0% 11%}
+    50%{background-position:100% 90%}
+    100%{background-position:0% 11%}
+}
+@keyframes smooth {
+    0%{background-position:0% 11%}
+    50%{background-position:100% 90%}
+    100%{background-position:0% 11%}
+}
+#bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 .logo{
     cursor: pointer;
@@ -40,7 +72,7 @@ header{
 }
 a {
     text-decoration: none;
-    color : white
+    color: white; 
 }
 .head{
 
@@ -53,6 +85,10 @@ a {
     font-size: 1rem;
 }
 
+.head a {
+    text-decoration: none;
+    color: white;
+}
 
 
 .container{
