--- a/frontend/front/style/signup.css
+++ b/frontend/front/style/signup.css
@@ -1,59 +1,65 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.signup-form {
-    position: absolute;
-    color: white;
-    border-radius: 15px;
+.signup-form{
     background-image: linear-gradient(to bottom right, rgba(255, 254, 254, 0.2) ,rgba(0, 0, 0, 0.25));
     backdrop-filter: blur(10px);
     box-shadow: 7px 7px 31px 7px rgba(0, 0, 0, 0.25);
-    font-family: "celesti";
-    left: 40%;
-    width: 20%;
-    height: 40%;
-}
-
-#signup {
-    padding-top:8% ;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 2rem;
     width: 100%;
-    height: 100%;
-    gap: 1rem;
+    max-width: 350px; /* Max width of the form */
+    border-radius: 15px; /* Rounded corners */
+    font-family: 'celesti';
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
 }
 
-#username, #email, #password, #confirm_password {
-    font-family: "Bungee";
-    width: 80%; 
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.287);
-    backdrop-filter: blur(10px);
-    border: none;
-}
-
-#username:focus, #email:focus, #password:focus, #confirm_password:focus {
-    outline: none;
-    border: 2px solid rgb(216, 97, 22);background-image: linear-gradient(to right, #ff541059, #412f0c48);
-}
-
-#signup button {
-    font-family: "celesti";
-    width: 20%;
-    padding: 10px;
-    font-size: 100%;
-    background-image: linear-gradient(to right, #ff105f, #ffac06);
+.signup-form h2 {
+    text-align: center;
     color: white;
+    margin-bottom: 1.5rem;
+    font-size: 1.75rem;
+}
+
+.signup-form input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 1rem;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    font-size: 1rem;
+    color: #333333;
+    font-family: 'Bungee';
+}
+
+.signup-form input:focus {
+    outline: none;
+    border-color: #ff5500; /* Focus effect */
+}
+
+.signup-form button {
+    width: 50%;
+    padding: 12px;
+    background-color: #cd2314;
+    color: rgb(255, 255, 255);
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
+    font-size: 1rem;
     cursor: pointer;
-    margin-top: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.signup-form button:hover {
+    background-color: #cd241469;
+}
+.signup-form a:hover {
+    color: #ff4800;
+}
+
+.signup-form p,
+.signup-form a {
+    text-align: center;
+    font-size: 0.9rem;
+    color: white;
+    margin-top: 1rem;
+    text-decoration: none;
 }
