--- a/frontend/front/style/index.css
+++ b/frontend/front/style/index.css
@@ -7,12 +7,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* body {
+body {
     background-image: url('../svg/background.png');
     background-size: cover;
     background-attachment: fixed;
-} */
-/* .container{
+}
+.container{
     display : flex;
     flex-direction: row;
     align-items: center;
@@ -22,5 +22,5 @@
     padding: 0 100px;
     gap: 11rem;
     color: white
-} */
+}
 
