--- a/frontend/front/style/trans.css
+++ b/frontend/front/style/trans.css
@@ -29,6 +29,11 @@ body {
     justify-content: center; 
     align-items: center;
     height: 20vh;
+	animation: slideUp 0.8s ease;
+	transition: transform 0.3s ease-in-out;
+}
+.logop:hover {
+	transform: scale(1.1); /* Zoom in effect */
 }
 .oplogo
 {
@@ -109,18 +114,19 @@ body {
     border: 0.5px solid  rgba(255, 255, 255, 0.239); /* Add a border */
     position: relative; /* Positioning for the pseudo-element */
     transform: translateY(-50px);  /* Initially positioned above */
-    animation: slideDownFadeIn 1s ease forwards;
+	animation: slideDownFadeIn 0.8s ease forwards;
+	transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 
 .signinbox {
-    display: flex;
-    margin-top: 5%;
+	display: flex;
+    /* margin-top: 1%; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: center;
-    height: 50vh;
+    height: 60vh;
     width: 19vw;
     margin-left: 40.5%;
     /* padding-top: 20px; */
@@ -129,7 +135,14 @@ body {
     border: 0.5px solid rgba(229, 102, 39, 0.278);
     border-radius: 50px;
     transform: translateY(-50px);  /* Initially positioned above */
-    animation: slideDownFadeIn 1s ease forwards;
+    animation: slideDownFadeIn 0.8s ease forwards;
+	transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.signinbox:hover {
+	box-shadow: 0px 0px 40px rgba(0, 0, 0, 1.5);
+}
+.signupbox:hover {
+	box-shadow: 0px 0px 40px rgba(0, 0, 0, 1.5);
 }
 
 @keyframes slideDownFadeIn {
@@ -144,7 +157,7 @@ body {
 }
 
 .wlctxt{
-    font-family: 'Celesti From', sans-serif;
+    font-family: 'Celesti';
     color: white;
     text-align: center;
 }
@@ -293,6 +306,7 @@ button.join:hover .flech {
 }
 .loginbtn:hover{
     background-color: white;
+	transition: background-color 0.5s ease-in-out;
     color:black;
     cursor: pointer;
 }
@@ -370,7 +384,7 @@ button.join:hover .flech {
     margin-top: 6%;
     /* margin-right: 3%; */
     align-items: center;
-    font-family: Celesti From;
+    font-family: 'Celesti';
     border: 0.5px solid rgba(255, 255, 255, 0.405);
     background: linear-gradient(rgba(255, 255, 255, 0.215), rgba(255, 255, 255, 0));
     backdrop-filter: blur(4px);
@@ -663,7 +677,7 @@ button.join:hover .flech {
     display:flex ;
     font-size: 2vh;
     text-align: center;
-    font-family: 'Celesti From', sans-serif;
+    font-family: 'Celesti';
 }
 .profilepic p{
     display:flex ;
@@ -755,13 +769,13 @@ button.join:hover .flech {
 /* Styling for rank profile headings */
 .rank-profile h3 {
     text-align: center;
-    font-family: 'Celesti From', sans-serif;
+    font-family: 'Celesti';
 }
 .open-txt h3{
     display: flex;
     position: relative;
     text-align: center;
-    font-family: 'Celesti From', sans-serif;
+    font-family: 'Celesti';
     font-size: 7vw;
     z-index: 1;
     top: 40px;
@@ -907,7 +921,7 @@ button.join:hover .flech {
     flex-direction: column;
     justify-content: center;
     color: rgb(255, 255, 255);
-    font-family: 'celesti from';
+    font-family: 'celesti';
     font-size: large;
 }
 .username{
