--- a/frontend/front/style/trans.css
+++ b/frontend/front/style/trans.css
@@ -135,14 +135,10 @@ body {
     backdrop-filter: blur(9px);
     border: 0.5px solid rgba(229, 102, 39, 0.278);
     border-radius: 50px;
-    transform: translateY(-50px);  /* Initially positioned above */
     animation: slideDownFadeIn 0.8s ease forwards;
-	transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+	transition: box-shadow 0.3s ease-in-out;
 }
-.signinbox:hover {
-	box-shadow: 0px 0px 40px rgba(0, 0, 0, 1.5);
-}
-.signupbox:hover {
+.signinbox:hover, .signupbox:hover {
 	box-shadow: 0px 0px 40px rgba(0, 0, 0, 1.5);
 }
 
@@ -221,7 +217,7 @@ body {
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    margin-left: 1%;
+    margin-left: 1%; 
     animation: slideRight 0.8s ease;
 }
 .head2{
@@ -433,7 +429,7 @@ button.join:hover .flech {
     border-radius: 12px;
     font-family: 'Baloo_Bhai_2';
     font-size: 16px;
-    margin-top: 6.5%;
+    margin-top: 6.38%;
     outline: none;
     /* z-index: 1; */
     /* padding-left: 10px; */
@@ -862,6 +858,7 @@ button.join:hover .flech {
     font-family: 'Baloo_Bhai_2';
     outline: none;
     color: white;
+    animation: slideUp 0.8s ease;
 }
 .error-message{
     position: absolute;
@@ -1063,4 +1060,48 @@ button.join:hover .flech {
     font-size: 2vh;
 }
 
+/* game */
+#gameBar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    width: 100vw;
+    height: 80vh;
+}
+#gameOffline{
+    position: relative;
+    left:15%;
+    animation: slideUp 0.5s ease;
+}
+#gameOnline{
+    position: relative;
+    right: 0;
+    animation: slideUp 0.8s ease;
+    /* left: 20%; */
+}
 
+.gameLine{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0.5px solid rgba(255, 255, 255, 0.292);
+    background: linear-gradient(rgba(255, 255, 255, 0.215), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(4px);
+    border-radius: 10px;
+    font-family: 'celesti';
+    height: 40vh;
+    width: 20vw;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    /* padding-left: 10px; */
+}
+.gameLine:hover{
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 1.5);
+    transform: scale(1.1);
+    /* transition: transform 0.2s ease-in-out; */
+}
+.gameLine a {
+    font-size: 4.5rem;
+    color: white;
+    text-decoration: none;
+}
