--- a/frontend/front/style/settings.css
+++ b/frontend/front/style/settings.css
@@ -137,25 +137,13 @@
 
 /* Modal */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4); /* Black with opacity */
-    color: white;
+    position: absolute;
+    top: 30%;
+    left: 40%;
 }
 
 .modal-content {
-    max-width: 400px;
-    height: 100px;
-    margin: auto; /* 15% from the top and centered */
-    /* background-color: #fefefe; */
-    border: 1px solid #888;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    top :50%;
+
 }
 
 .close {
